--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,5 @@ dependencies = [
     "sentence-transformers>=5.1.1",
     "toyaikit>=0.0.5",
     "tqdm>=4.67.1",
+    "youtube-transcript-api>=1.2.3",
 ]
